--- a/conf/000-default.conf
+++ b/conf/000-default.conf
@@ -22,6 +22,16 @@ server {
                 fastcgi_pass unix:/run/php/php8.1-fpm.sock;
         }
 
+        ### stats
+        if ($request_uri ~* ^/(stats|doc|failed_auth\.html).*$)
+        {
+        break;
+        }
+        ### permalinks
+        if (!-e $request_filename) {
+        rewrite ^.*$ /index.php last;
+        }
+
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
         location ~ /\.ht {
