--- a/conf/000-default.conf
+++ b/conf/000-default.conf
@@ -11,7 +11,7 @@ server {
         location / {
                 # First attempt to serve request as file, then
                 # as directory, then fall back to displaying a 404.
-                try_files $uri $uri/ =404;
+                try_files $uri $uri/ /index.php?$args;
         }
 
         # pass PHP scripts to FastCGI server
@@ -20,16 +20,6 @@ server {
                 include snippets/fastcgi-php.conf;
                 # With php-fpm (or other unix sockets):
                 fastcgi_pass unix:/run/php/php8.1-fpm.sock;
-        }
-
-        ### stats
-        if ($request_uri ~* ^/(stats|doc|failed_auth\.html).*$)
-        {
-        break;
-        }
-        ### permalinks
-        if (!-e $request_filename) {
-        rewrite ^.*$ /index.php last;
         }
 
         # deny access to .htaccess files, if Apache's document root
